--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,46 @@
 = eu_central_bank
 
-Description goes here.
+== Introduction
+
+This gem downloads the exchange rates from the European Central Bank. You can calculate exchange rates with it. It is compatible with the money gem.
+
+== Installation
+
+ $ gem install eu_central_bank
+
+== Dependencies
+
+* nokogiri
+* money
+
+== Usage
+
+With the gem, you do not need to manually add exchange rates. Calling update_rates will download the rates from the European Central Bank. The API is the same as the money gem. Feel free to use Money objects with the bank.
+
+  eu_bank = EuCentralBank.new
+  Money.default_bank = eu_bank
+  money1 = Money.new(10)
+  money1.bank # eu_bank
+
+  # call this before calculating exchange rates
+  # this will download the rates from ECB
+  eu_bank.update_rates
+
+  # exchange 100 CAD to USD
+  # API is the same as the money gem
+  eu_bank.exchange(100, "CAD", "USD") # 124
+  Money.us_dollar(100).exchange_to("CAD")  # Money.ca_dollar(124)
+
+For performance reasons, you may prefer to read from a file instead. Furthermore, ECB publishes their rates daily. It makes sense to save the rates in a file to read from.
+
+  # saves the rates in a specified location
+  eu_bank.save_rates("/some/file/location/exchange_rates.xml")
+
+  # reads the rates from the specified location
+  eu_bank.update_rates("/some/file/location/exchange_rates.xml")
+
+  # exchange 100 CAD to USD as usual
+  eu_bank.exchange(100, "CAD", "USD") # 124
 
 == Note on Patches/Pull Requests
  
@@ -10,7 +50,6 @@ Description goes here.
   future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
   (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
-* Send me a pull request. Bonus points for topic branches.
 
 == Copyright
 
