--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,9 @@
 = eu_central_bank changelog
 
+== 0.1.3 (December 18 2010)
+
+* Fixed the gemspec bug
+
 == 0.1.2 (December 15 2010)
 
 * Clean up dependencies
