--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,10 +1,14 @@
 = eu_central_bank changelog
 
-== 0.1.5 (Jan 18 2010)
+== 0.2.0 (Feb 19 2011)
+
+* Changed to use rounding instead of flooring dues to issues with negative number amounts
+
+== 0.1.5 (Jan 18 2011)
 
 * Updated the money dependency on the gemspec
 
-== 0.1.4 (Jan 18 2010)
+== 0.1.4 (Jan 18 2011)
 
 * Removed the Estonian Kroon from the list of currencies as EU Central Bank does not list it anymore
 
