--- a/README.rdoc
+++ b/README.rdoc
@@ -45,12 +45,8 @@ For performance reasons, you may prefer to read from a file instead. Furthermore
   # exchange 100 CAD to USD as usual
   eu_bank.exchange_with(Money.new(100, "CAD"), "USD") # Money.new(80, "USD")
 
-== Deprecation
-
-Note that the *exchange* method will be deprecated in Money version 3.2.0. eu_central_bank will follow suite and deprecate the method in version 0.2.0
-
 == Note on Patches/Pull Requests
- 
+
 * Fork the project.
 * Make your feature addition or bug fix.
 * Add tests for it. This is important so I don't break it in a
@@ -60,4 +56,4 @@ Note that the *exchange* method will be deprecated in Money version 3.2.0. eu_ce
 
 == Copyright
 
-Copyright (c) 2010 Wong Liang Zan. See LICENSE for details.
+Copyright (c) 2010 RubyMoney. See LICENSE for details.
