updated nokogiri to 1.5.0. bumped to v0.2.3

--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,5 +1,9 @@
 = eu_central_bank changelog
 
+== 0.2.3 (Sep 8 2011)
+
+* Updated Nokogiri dependency to 1.5.0
+
 == 0.2.2 (Jul 13 2011)
 
 * Fixed #2 versioning bug
